k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitsuserregappproject
  labels:
    app: bitsuserregappproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitsuserregappproject
  template:
    metadata:
      labels:
        app: bitsuserregappproject
    spec:
      containers:
        - name: bitsuserregappproject
          image: workwithaadi/bitsuserregappproject
          ports:
            - containerPort: 5050
