k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: bitsuserregappproject
  labels:
    app: bitsuserregappproject
spec:
  ports:
    - port: 80
      targetPort: 5050
      protocol: TCP
  selector:
    app: bitsuserregappproject
  type: ClusterIP
