k8s/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitsuserregappproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bitsuserregappproject.publicvm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitsuserregappproject
                port:
                  number: 80
